force-app/main/default/objects/Authorship_Research_Output_Team_Member__c/Authorship_Research_Output_Team_Member__c.object-meta.xml
<CustomObject>
    <label>Authorship/Research Output Team Member</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Title</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorships/Research Output Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>