force-app/main/default/objects/Authorship_Research_Output_Team_Member__c/fields/I_RS_Affiliated_To__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Affiliated_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affiliated To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Authorships/Research Output Team Members</relationshipLabel>
    <relationshipName>Authorships_Research_Output_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>