force-app/main/default/objects/Authorship_Research_Output_Team_Member__c/fields/I_RS_Affiliation_Statement_Available__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Affiliation_Statement_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SB-77 Moving to right object as per Ticket</description>
    <label>Affiliation Statement Available</label>
    <type>Checkbox</type>
</CustomField>