force-app/main/default/objects/Authorship_Research_Output_Team_Member__c/fields/I_RS_Contact__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Authorships/Research Output Team Members</relationshipLabel>
    <relationshipName>Authorships_Research_Output_Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>