force-app/main/default/objects/Authorship_Research_Output_Team_Member__c/fields/I_RS_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Last_Name__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>