force-app/main/default/objects/Authorship_Research_Output_Team_Member__c/fields/I_RS_Order__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>