force-app/main/default/objects/Authorship_Research_Output_Team_Member__c/fields/I_RS_Research_Output__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Output__c</fullName>
    <description>This is the mater field</description>
    <label>Research Output</label>
    <referenceTo>Research_Output__c</referenceTo>
    <relationshipLabel>Authorships/Research Output Team Members</relationshipLabel>
    <relationshipName>Authorships_Research_Output_Team_Members</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>