force-app/main/default/objects/Authorship_Research_Output_Team_Member__c/fields/I_RS_Type_Role__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Type_Role__c</fullName>
    <label>Type/Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Author</fullName>
            </value>
            <value>
                <fullName>Editor</fullName>
            </value>
            <value>
                <fullName>Translator</fullName>
            </value>
            <value>
                <fullName>Contributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>