force-app/main/default/objects/Authorship_Research_Output_Team_Member__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>I_RS_Research_Output__r.I_RS_Title_Short__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Research Output Short Title</label>
    <type>Text</type>
</CustomField>