force-app/main/default/objects/Authorship_Research_Output_Team_Member__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>I_RS_Research_Output__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Research Output Record Type</label>
    <type>Text</type>
</CustomField>